# a-text-editor

./: .gitignore  CMakeLists.txt  README.md  document.c  document.h  main.c  text_buffer.c  text_buffer.h
